--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,8 +45,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/logo.jfif
+    - images/canalboating.png
+    - images/canalboating1.png
+    - images/canalboating2.png
+    - images/canalboating3.png
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
